flame/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: flame
  labels:
    namespace: flame
