flame/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flame-ingress
  labels:
    app: flame
    component: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/auth-url: "https://auth.checinski.xyz/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: https://auth.checinski.xyz/oauth2/start
spec:
  tls:
    - hosts:
        - flame.checinski.xyz
      secretName: flame-checinski-xyz-tls
  rules:
    - host: flame.checinski.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flame
                port:
                  number: 80
